--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             <p id="score">0</p>
          </div>
       </div>
+      
+      <div id="loading">
+         <p>LOADING</p>
+      </div>
 
       <script src="js/main.js"></script>
    </body>
