--- a/index.html
+++ b/index.html
@@ -46,9 +46,16 @@
             <p id="score">0</p>
          </div>
       </div>
-      
+
       <div id="loading">
          <p>LOADING</p>
+      </div>
+
+      <div class="modal">
+         <div class="modal-content">
+            <span class="close-button">×</span>
+            <h2 id="end-message">GAME OVER :(</h2>
+         </div>
       </div>
 
       <script src="js/main.js"></script>
