--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 
       <link rel="stylesheet" href="css/style.css" />
 
-      <!-- vendor -->
+      <!-- Vendor -->
       <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
+
+      <!-- Favicon -->
+
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+      <link rel="manifest" href="/site.webmanifest" />
    </head>
 
    <body>
